# posepile

./: pyproject.toml  setup.py
src/posepile/: compositing.py  datasets2d.py  datasets3d.py  paths.py
src/posepile/ds/aic/: main.py
src/posepile/ds/aist/: main.py
src/posepile/ds/bedlam/: main.py
src/posepile/ds/behave/: add_parametric.py  main.py
src/posepile/ds/densepose_coco/: main.py
src/posepile/ds/egohumans/: main.py
src/posepile/ds/ehf/: eval2.py
src/posepile/ds/emdb/: eval.py  eval_nonparam.py
src/posepile/ds/experimental/: triangulate_common.py
src/posepile/ds/gpa/: main.py
src/posepile/ds/h36m/: main.py
src/posepile/ds/halpe/: main.py
src/posepile/ds/hi4d/: main.py  render.py
src/posepile/ds/humbi/: main.py
src/posepile/ds/ikea/: main.py
src/posepile/ds/imar/: main.py
src/posepile/ds/jrdb/: main.py
src/posepile/ds/jta/: main.py
src/posepile/ds/mads/: main.py
src/posepile/ds/moyo/: main.py
src/posepile/ds/mri/: main.py
src/posepile/ds/muco/: main.py
src/posepile/ds/mupots/: main.py
src/posepile/ds/rich/: download_as_jpeg.py  eval_nonparam.py  main.py  main.sh
src/posepile/ds/spec/: add_parametric.py  main.py
src/posepile/ds/ssp3d/: eval.py
src/posepile/ds/surreal/: main.py
src/posepile/ds/tdhp/: main.py
src/posepile/ds/tdoh/: main.py
src/posepile/ds/tdpw/: eval.py  eval2.py  eval_nonparam.py  eval_nonparam2.py  eval_simple.py  main.py  (+1 more)
src/posepile/merging/: merged_dataset2d.py
src/posepile/tools/: convert_to_smplx.py
src/posepile/util/: improc.py  maskproc.py  preproc_for_efficiency.py
(+5 files in other folders)
